# mnemonic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml
.claude-flow/data/: pending-insights.jsonl
.github/workflows/: ci.yml  release.yml
clients/macos/: Package.swift  README.md
clients/macos/Sources/MnemonicBar/: App.swift  MenuBarView.swift  MnemonicService.swift
src/: api.rs  config.rs  daemon.rs  event.rs  main.rs  mcp.rs  scoring.rs
src/classifier/: mod.rs  rules.rs
src/embedding/: mod.rs
src/graph/: extractor.rs  mod.rs
src/output/: memory_api.rs  memory_files.rs  mod.rs  obsidian.rs  whisper.rs
src/storage/: hnsw_index.rs  mod.rs
src/watcher/: conversation.rs  files.rs  git.rs  mod.rs
